@@ -68,6 +68,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   anchor identifiers
 * (bug 5519) Allow sidebar cache to be disabled; disable it by default.
 * Maintenance script to import the contents of a text file into a wiki page
+* installer: show realpath when asking to chmod g+w ./config
+* installer: hide errors returned when trying to dl() mysql.so / pgsql.so
+* installer: cleanly outputbuffer when dieing out
 
 == Compatibility ==
 
